switch bluetooth and connectors package
this makes adding new connectors like wifi/tcp connector more structured

--- a/app/src/main/res/layout/activity_bluetooth_connector.xml
+++ b/app/src/main/res/layout/activity_bluetooth_connector.xml
@@ -5,5 +5,5 @@
     android:id="@+id/connector_content"
     android:orientation="vertical"
     android:layout_gravity="center_horizontal"
-    tools:context=".bluetooth.connectors.BluetoothConnector">
+    tools:context=".connectors.bluetooth.BluetoothConnector">
 </LinearLayout>
