--- a/app/src/main/res/layout/fragment_device_selector.xml
+++ b/app/src/main/res/layout/fragment_device_selector.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".bluetooth.connectors.DeviceSelector">
+    tools:context=".connectors.bluetooth.DeviceSelector">
 
     <TextView
         android:id="@+id/title_already_paired_devices"
