--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -17,7 +17,8 @@
         android:layout_gravity="center"
         android:layout_row="0"
         android:padding="15dp"
-        android:src="@mipmap/launcher" />
+        android:src="@mipmap/launcher"
+        android:contentDescription="@string/app_icon_description"/>
 
     <TextView
         android:id="@+id/appTitle"
