--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -28,7 +28,7 @@
         android:layout_row="1"
         android:padding="10dp"
         android:text="@string/app_name"
-        android:textAppearance="@android:style/TextAppearance.Material.Large"
+        android:textAppearance="@style/Presenter.TextAppearance.Large"
         android:textStyle="bold" />
 
     <TextView
