--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,2 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="Presenter" parent="android:Theme.Holo"/>
+    <style name="Presenter.TextAppearance.Large"
+           parent="android:TextAppearance.Holo.Large" />
 </resources>
