--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -62,6 +62,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="20dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:layout_column="0"
         android:layout_gravity="center"
         android:layout_row="5"
