--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -9,7 +9,6 @@
     tools:context="de.wohlfrom.presenter.AboutActivity">
 
     <ImageView
-        android:id="@+id/appIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="0"
@@ -20,7 +19,6 @@
         android:contentDescription="@string/app_icon_description"/>
 
     <TextView
-        android:id="@+id/appTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="0"
@@ -40,12 +38,12 @@
         android:layout_row="2" />
 
     <TextView
-        android:id="@+id/authorView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="0"
         android:layout_gravity="center"
-        android:layout_row="3" />
+        android:layout_row="3"
+        android:text="@string/copyright" />
 
     <TextView
         android:id="@+id/license"
